--- a/css/index.css
+++ b/css/index.css
@@ -28,9 +28,16 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 body {
 	line-height: 1;
 }
+
+.top-menu h1 a {
+    font-size: 50px;
+    text-align: center;
+}
+
 ol, ul {
 	list-style: none;
 }
@@ -49,6 +56,7 @@ table {
 
 * {
     box-sizing: border-box;
+    color: rgb(225, 239, 230);
 }
 
 html {
@@ -68,7 +76,9 @@ h1, h2, h3, h4, h5, h6, p, a, i {
 }
 
 h1 {
-    font-size: 7.5rem;
+    display: flex;
+    justify-content: center;
+    padding: 30px 0 10px 0;
 }
 
 h2 {
@@ -81,6 +91,26 @@ h3 {
 
 p, a {
     font-size: 3rem;
+}
+
+header .top-menu {
+    background-color: rgb(0, 4, 17, .8);
+}
+
+nav div {
+    display: flex;
+    justify-content: space-evenly;
+
+}
+
+.icons {
+    display: flex;
+    justify-content: center;
+}
+
+.icons i {
+    margin: 30px;
+    font-size: 40px;
 }
 
 /* header section */
@@ -108,15 +138,18 @@ header {
 /* gallery section */
 .gallery {
     width: 100%;
-    height: 100vh;
     text-align: center;
     background-color: rgb(0, 4, 17);
+}
+
+img {
+    padding: 20px;
 }
 
 /* about us section */
 .about {
     width: 100%;
-    height: 75vh;
+    /* height: 75vh; */
     text-align: center;
     background-image: url("../img/staff-cooks.jpg");
     background-size: cover;
@@ -188,16 +221,104 @@ header {
     width: 25%;
 }
 
+.mail-listesi {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 80px;
+    background: rgb(0, 4, 17);
+}
+
 /* footer section */
 footer {
     width: 100%;
     height: 15vh;
     padding-top: 2.5vh;
     font-size: 3rem;
+    background-color: rgb(0, 4, 17);
+    color: rgb(225, 239, 230);
 }
 
-/* mobile media query */
-@media (max-width: 428px) {
+footer .footer-menu {
+    display: flex;
+    justify-content: space-around;
+    background-color: rgb(0, 4, 17);
+}
+
+footer p {
+    background-color: rgb(0, 4, 17);
+    color: rgb(225, 239, 230);
+    display: flex;
+    /* justify-content: flex-end; */
+    /* padding-right: 10%; */
+    justify-content: center;
+    font-size: 18px;
+}
+
+footer form {
+    display: flex;
+    justify-content: flex-start;
+}
+
+footer .button {
+    color: rgb(0, 4, 17);
+    font-size: 20px;
+}
+
+footer input {
+    font-size: 20px;
+}
+
+footer .button, footer input {
+    padding: 5px 10px;
+} 
+
+@media (min-width: 428px) and (max-width: 1024px) {
+  nav div a {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .menu-section {
+    width: 100%;
+  }
+  .menu-item {
+    padding: 10px 40px;
+  }
+  footer {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+}
+
+@media (max-width: 1024px) {
+
+    .icons {
+            flex-direction: row;
+        }
+    nav div {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-menu {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-menu div {
+        text-align: center;
+    }
+
+    .info {
+        flex-direction: column;
+        align-items: center;
+    }
+    .info div {
+        width: 100%;
+    }
+
     /* header section */
     
 
@@ -249,5 +370,8 @@ footer {
         height: auto;
         padding-top: 2.5vh;
         font-size: 2rem;
+        background-color: rgb(0, 4, 17);
+        color: rgb(225, 239, 230);
     }
 }
+    
