--- a/css/menu.css
+++ b/css/menu.css
@@ -3,150 +3,404 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+  color: rgb(225, 239, 230);
 }
 
 html {
-    max-width: 1920px;
-    min-width: 428px;
-    font-size: 62.5%;
+  max-width: 1920px;
+  min-width: 428px;
+  font-size: 62.5%;
+}
+
+.top-menu h1 a {
+    font-size: 50px;
+    text-align: center;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    line-height: 1.5;
+  font-family: "Roboto", sans-serif;
+  line-height: 1.5;
 }
 
-h1, h2, h3, h4, h5, h6, p, a, i {
-    text-decoration: none;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+i {
+  text-decoration: none;
 }
 
 h1 {
-    font-size: 7.5rem;
+  display: flex;
+  justify-content: center;
+  padding: 30px 0 10px 0;
 }
 
 h2 {
-    font-size: 6rem;
+  font-size: 6rem;
 }
 
 h3 {
-    font-size: 5rem;
+  font-size: 5rem;
 }
 
 h4 {
-    font-size: 4rem;
+  font-size: 4rem;
 }
 
-p, a {
-    font-size: 3rem;
+p,
+a {
+  font-size: 3rem;
 }
 
 /* header section */
 header {
-    width: 100%;
-    height: 100vh;
-    background-image: url('../img/menu-header.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+  background-image: url("../img/menu-header.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 /* spacer */
 .spacer {
-    width: 100%;
-    height: 20vh;
-    background-color: rgb(0, 4, 17);
+  width: 100%;
+  height: 20vh;
+  background-color: rgb(0, 4, 17);
 }
 .spacer-sm {
-    width: 100%;
-    height: 10vh;
-    background-color: rgb(0, 4, 17);
+  width: 100%;
+  height: 10vh;
+  background-color: rgb(0, 4, 17);
+}
+
+header .top-menu {
+  background-color: rgb(0, 4, 17, 0.8);
+}
+
+nav div {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.icons {
+  display: flex;
+  justify-content: center;
+}
+
+.icons i {
+  margin: 30px;
+  font-size: 40px;
 }
 
 /* menu */
 
 .menu {
-    width: 100%;
-    height: auto;
-    background-image: url('../img/staff-bartender.jpg');
-    background-color: rgb(0, 4, 17);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  width: 100%;
+  height: auto;
+  background-image: url("../img/staff-bartender.jpg");
+  background-color: rgb(0, 4, 17);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 /* footer section */
+
 footer {
-    width: 100%;
-    height: 15vh;
-    padding-top: 2.5vh;
-    font-size: 3rem;
+  width: 100%;
+  height: 15vh;
+  padding-top: 2.5vh;
+  font-size: 3rem;
+  background-color: rgb(0, 4, 17);
+  color: rgb(225, 239, 230);
 }
 
-/* mobile media query */
-@media (max-width: 428px) {
-    /* header section */
-    .header-title {
-        width: 75%;
-        margin: 0 auto;
-        text-align: center;
-        font-size: 4rem;
-    }
+footer .footer-menu {
+  display: flex;
+  justify-content: space-around;
+  background-color: rgb(0, 4, 17);
+}
 
-    /* menu */
-    .menu {
-        background-image: none;
-    }
+footer p {
+  background-color: rgb(0, 4, 17);
+  color: rgb(225, 239, 230);
+  display: flex;
+  /* justify-content: flex-end; */
+  /* padding-right: 10%; */
+  justify-content: center;
+  font-size: 18px;
+}
 
-    /* footer section */
-    footer {
-        height: auto;
-        padding-top: 2.5vh;
-        font-size: 2rem;
-    }
+footer form {
+  display: flex;
+  justify-content: flex-start;
+}
+
+footer .button {
+  color: rgb(0, 4, 17);
+  font-size: 20px;
+}
+
+footer input {
+  font-size: 20px;
+}
+
+footer .button,
+footer input {
+  padding: 5px 10px;
+}
+
+.menu-container {
+  display: inline-table;
+  background-color: rgb(0, 4, 17, 0.8);
+}
+
+.menu-section {
+  margin-bottom: 80px;
+  width: 50%;
+  display: inline-grid;
+}
+
+.menu-item {
+  padding: 10px 80px;
+}
+
+.item {
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu-item p {
+  font-size: 25px;
+}
+
+.menu-container h2 {
+  text-align: center;
+  margin: 30px 0;
+}
+
+hr {
+    display: none;
+}
+
+.menu-title {
+    text-align: left;
+    padding-left: 80px;
+}
+
+.mail-listesi {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 80px;
+    background: rgb(0, 4, 17);
+}
+
+@media (max-width: 1024px) {
+
+    .icons {
+            flex-direction: row;
+        }
+nav div {
+    flex-direction: column;
+    align-items: center;
+}
+
+  hr {
+    display: block;
+    background-color: rgb(0, 4, 17);
+    height: 4px;
+  }
+
+  .menu-title { 
+    text-align: center;
+    padding-left: 0;
+    border: 3px solid rgb(0, 4, 17);
+    margin-bottom: 30px;
+    border-radius: 5px;
+  }
+
+  .item {
+      flex-direction: column;
+      align-items: center;
+  }
+
+  .menu-item p {
+      text-align: center;
+  }
+
+  .menu-container {
+    background-color: rgb(225, 239, 230);
+  }
+
+  .menu-container h2, p, h4 {
+    color: rgb(0, 4, 17);
+  }
+
+  .menu-section {
+    width: 100%;
+  }
+  .menu-item {
+    padding: 10px 40px;
+  }
+  .footer-menu {
+      flex-direction: column;
+      align-items: center;
+  }
+  .footer-menu div {
+    text-align: center;
+  }
+
+  /* header section */
+  .header-title {
+    width: 75%;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 4rem;
+  }
+
+  /* menu */
+  .menu {
+    background-image: none;
+  }
+
+  /* footer section */
+  footer {
+    height: auto;
+    padding-top: 2.5vh;
+    font-size: 2rem;
+  }
 }
